* ver 1.2.0 + StreamBase: New abstract class + AsyncSerial: async serial port driver

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,14 +9,15 @@ package-dir = {"" = "src"}
 
 [project]
 name = "DLMS_SPODES_communications"
-version = "1.1.1"
+version = "1.2.0"
 authors = [
     {name="Serj Kotilevski", email="youserj@outlook.com"}
 ]
 dependencies = [
     "bleak==0.20.2",
     "netaddr>=0.8.0",
-    "pyserial>=3.5"
+    "pyserial>=3.5",
+    "pyserial-asyncio>=0.6"
 ]
 description="dlms-spodes"
 readme = "README.md"
