* ver 1.5.0 * use "StructResult>=0.9.5, <0.10" + Media.to_connection, to_recv, to_close, to_drain: into Protocol * Media.open: return Result * BLEKPZ: discovery_to change to to_connection

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,13 +9,14 @@ package-dir = {"" = "src"}
 
 [project]
 name = "DLMS_SPODES_communications"
-version = "1.4.13"
+version = "1.5.0"
 authors = [
     {name="Serj Kotilevski", email="youserj@outlook.com"}
 ]
 dependencies = [
     "bleak>=0.22.3",
-    "pyserial-asyncio>=0.6"
+    "pyserial-asyncio>=0.6",
+    "StructResult>=0.9.5, <0.10"
 ]
 description="dlms-spodes"
 readme = "README.md"
